# apertivo

./: .gitignore  README.md  backend.project  cabal.project  default.nix
backend/: backend.cabal
backend/src/: Main.hs
backend/src/Backend/: Interfaces.hs  MtlServer.hs  Setup.hs
common/: common.cabal
common/src/Common/: Dto.hs  Helper.hs  ServantRoutes.hs  Swagger.hs
css/: mystyles.css  mystyles.scss
docs/: lib.js  out.frefs.js  out.frefs.json  out.stats
frontend/: cabal.sandbox.config  frontend.cabal
frontend/.cabal-sandbox/lib/x86_64-osx-ghc-8.4.3/: libHSaeson-pretty-0.8.7-4mPpA5lsJPwHfsMQHPunq-ghc8.4.3.dylib  libHScmdargs-0.10.20-DuSx78jNQymI404wla4i2p-ghc8.4.3.dylib  libHScommon-0.1.0.0-8bu4zvyt4j64OFsHSe1DrH-ghc8.4.3.dylib  libHScommon-0.1.0.0-KUkQufOGonJChWaTelUqLI-ghc8.4.3.dylib  libHSfrontend-0.1.0.0-8uNSedCW6R1LC477iaEBb0-ghc8.4.3.dylib
frontend/.cabal-sandbox/lib/x86_64-osx-ghc-8.4.3/aeson-pretty-0.8.7-4mPpA5lsJPwHfsMQHPunq/Data/Aeson/Encode/: Pretty.dyn_hi  Pretty.hi
frontend/.cabal-sandbox/lib/x86_64-osx-ghc-8.4.3/cmdargs-0.10.20-DuSx78jNQymI404wla4i2p/Data/Generics/: Any.dyn_hi  Any.hi
frontend/.cabal-sandbox/lib/x86_64-osx-ghc-8.4.3/cmdargs-0.10.20-DuSx78jNQymI404wla4i2p/Data/Generics/Any/: Prelude.dyn_hi  Prelude.hi
frontend/.cabal-sandbox/lib/x86_64-osx-ghc-8.4.3/cmdargs-0.10.20-DuSx78jNQymI404wla4i2p/System/Console/: CmdArgs.dyn_hi  CmdArgs.hi
frontend/.cabal-sandbox/lib/x86_64-osx-ghc-8.4.3/cmdargs-0.10.20-DuSx78jNQymI404wla4i2p/System/Console/CmdArgs/: Annotate.dyn_hi  Annotate.hi  Default.dyn_hi  Default.hi  Explicit.dyn_hi  Explicit.hi  GetOpt.dyn_hi  GetOpt.hi  Helper.dyn_hi  Helper.hi  Implicit.dyn_hi  Implicit.hi  Quote.dyn_hi  Quote.hi  Text.dyn_hi  Text.hi  Verbosity.dyn_hi  Verbosity.hi
frontend/.cabal-sandbox/lib/x86_64-osx-ghc-8.4.3/cmdargs-0.10.20-DuSx78jNQymI404wla4i2p/System/Console/CmdArgs/Explicit/: Complete.dyn_hi  Complete.hi  ExpandArgsAt.dyn_hi  ExpandArgsAt.hi  Help.dyn_hi  (+7 more)
frontend/.cabal-sandbox/lib/x86_64-osx-ghc-8.4.3/common-0.1.0.0-8bu4zvyt4j64OFsHSe1DrH/Common/: Dto.dyn_hi  Dto.hi  Helper.dyn_hi  Helper.hi  ServantRoutes.dyn_hi  ServantRoutes.hi
frontend/.cabal-sandbox/lib/x86_64-osx-ghc-8.4.3/common-0.1.0.0-KUkQufOGonJChWaTelUqLI/Common/: Dto.dyn_hi  Dto.hi  Helper.dyn_hi  Helper.hi  ServantRoutes.dyn_hi  ServantRoutes.hi
frontend/.cabal-sandbox/lib/x86_64-osx-ghc-8.4.3/frontend-0.1.0.0-8uNSedCW6R1LC477iaEBb0/: Main.dyn_hi  Main.hi  ServantReflexClient.dyn_hi  ServantReflexClient.hi
frontend/.cabal-sandbox/x86_64-osx-ghc-8.4.3-packages.conf.d/: aeson-pretty-0.8.7-4mPpA5lsJPwHfsMQHPunq.conf  cmdargs-0.10.20-DuSx78jNQymI404wla4i2p.conf  common-0.1.0.0-8bu4zvyt4j64OFsHSe1DrH.conf  frontend-0.1.0.0-8uNSedCW6R1LC477iaEBb0.conf  package.cache
frontend/src/: Autocomplete.hs  CreateModal.hs  FilterArea.hs  FrontendCommon.hs  GeocodingReflexClient.hs  GetLocation.hs  Main.hs  ServantReflexClient.hs
frontend/src/Web/Google/: Geocoding.hs
frontend/src/Web/Google/Maps/: Common.hs
nix/: backend-shell.nix  backend.nix  doctest.nix  google-maps-reflex.nix  nixos-18-09.json  pkgs-from-json.nix  reflex-platform.nix  servant-reflex.nix  service-configuration.nix  shell-backend.nix
nix/backend/: backend.nix  ec2.nix  service-configuration.nix  shell.nix
(+14 files in other folders)
