name:                backend
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Christian Henry
maintainer:          christian.henry92@gmail.com
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

executable backend
  main-is:            Main.hs
  other-modules:
    Backend.Interfaces
    Backend.MtlServer
    Backend.Setup
  build-depends:      base >=4.9
                    , aeson
                    , aeson-pretty
                    , attoparsec
                    , bloodhound
                    , bytestring
                    , common
                    , connection
                    , containers
                    , directory
                    , http-client
                    , http-client-tls
                    , lens
                    , lens-aeson
                    , monad-logger
                    , monad-time
                    , mtl
                    , safe-money
                    , servant-server
                    , servant-swagger
                    , stm 
                    , swagger2
                    , text
                    , time
                    , time-exts
                    , transformers
                    , uuid
                    , wai
                    , wai-cors
                    , wai-logger
                    , warp
  hs-source-dirs: src
  default-language:   
    Haskell2010
  default-extensions:
    DataKinds
    DefaultSignatures
    DeriveFunctor
    DeriveGeneric
    FlexibleContexts
    FlexibleInstances
    GADTs
    GeneralizedNewtypeDeriving
    InstanceSigs
    LambdaCase
    OverloadedStrings
    StandaloneDeriving
    RecordWildCards
    TemplateHaskell
    TypeFamilies
    TypeOperators
    TypeSynonymInstances
