name:                common
version:             0.1.0.0 
license:             OtherLicense
license-file:        LICENSE
author:              Christian Henry
maintainer:          christian.henry@gmail.com
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  ghc-options:         -Wall -O2
  exposed-modules:
    Common.Dto
    Common.Helper
    Common.ServantRoutes  
  build-depends:        base >=4.9 && <4.12
                      , aeson
                      , aeson-pretty
                      , attoparsec
                      , bytestring
                      , containers
                      , directory
                      , lens
                      , mtl
                      , servant
                      , text
                      , time
                      , transformers
                      , uuid-types
  hs-source-dirs:      src
  default-language:    Haskell2010
  default-extensions:
    DataKinds
    DefaultSignatures
    DeriveAnyClass
    DeriveFunctor
    DeriveGeneric
    FlexibleContexts
    FlexibleInstances
    GADTs
    GeneralizedNewtypeDeriving
    InstanceSigs
    LambdaCase
    OverloadedStrings
    StandaloneDeriving
    RecordWildCards
    TemplateHaskell
    TypeFamilies
    TypeOperators
    TypeSynonymInstances